# CMAgent

./: .gitignore  AGENTS.md  README.md  config.yaml  llm.py  mcp_manager.py  pyproject.toml  tool_manager.py  tool_utils.py  utils.py
agents/: modules.py
mcp_servers/: data_server.py  math_server.py  text_server.py
src/cmagent/: __init__.py  llm.py  mcp_manager.py  tool_manager.py  utils.py
src/cmagent/modules/: __init__.py  base.py  llm_module.py  modules.py  plan_module.py  react.py  tool_use_module.py
tests/: test_react.py
toolbox/: hello.py
